source/stylesheets/site/_pricing.scss
@import "compass/css3/transform";
@import "compass/css3/transition";
@import "compass/css3/border-radius";
@import "compass/css3/transform";

.custom-plan-info {
  margin-top: 175px;
}

.custom-plan-info {
  margin-top: 200px;
}

.pricing {
  background: $blue;

  &.in-dollars {
    .cost {
      @include rotateX(-180deg);
    }

    .price-in-eur { display: none !important; }
    .price-in-dollars { display: block !important; }

    .footnote {
      .price-in-dollars { display: inline !important; }
    }
  }

  .cost {
    @include backface-visibility(hidden);
    @include transform-style(preserve-3d);
    @include transition(all .25s linear);

    position: relative;
    display: block;
    height: 70px;
    line-height: 1.0;

    .price-in-eur,
    .price-in-dollars {
      display: block;
      position: absolute;
      width: 100%;
      height: 100%;
      background: $plan-background;
    }

    .price-in-dollars {
      @include rotateX(180deg);

      display: none;
    }
  }

  h1, h2 {
    color: white;
    text-align: center;
  }

  h1 {
    @extend .hero-header;
  }

  h2 {
    color: $light-blue;
    font-weight: normal;
  }

  dt, dd {
    padding: 0;
    margin: 0;
  }

  .page {
    @include container;

    padding-bottom: 2em;
  }

  .plan {
    @include span-columns(12);
    @include border-radius(.5em);

    background: white;
    margin-top: 1em;
    margin-bottom: 1em;
    color: $dark-grey;
    border-bottom: 10px solid $mid-grey;
    position: relative;
    line-height: 1.5;

    @media only screen and (min-width: 600px) {
      @include span-columns(4);

      margin-top: 3em;
      margin-bottom: 2em;

      &:nth-child(3n) {
        @include span-columns(4 omega);
      }
    }

    &.featured {
      @media only screen and (min-width: 600px) {
        @include transform(scale(1.125));
      
        -webkit-font-smoothing: subpixel-antialiased;
        z-index: 99;
      }

      .name, .price {
        color: white;
      }

      .name {
        border-top: 10px solid $featured-plan-color;
      }
    }

    &.small {
      .name {
        border-top: 10px solid $small-plan-color;
      }
    }

    &.big {
      .name {
        border-top: 10px solid $biggest-plan-color;
      }
    }

    .name, .price {
      color: white;
      background: $plan-background;
    }

    .name, .price, .info, .actions {
      padding: 1em;
    }

    .name {
      text-align: center;
      text-transform: uppercase;
      font-weight: bold;
      letter-spacing: .2em;
      border-bottom: 1px solid $dark-grey;
    }

    .info {
      text-align: center;

      &.secondary {
        color: $mid-grey;
      }
    }

    .per-month {
      font-weight: normal;
      font-size: .5em;
      color: $mid-grey;
    }


    .footnote {
      font-family: $serif;
      font-weight: normal;
      font-style: italic;
      font-size: 12px;
      letter-spacing: 0;
      color: $mid-grey;
      clear: both;
      display: block;
      padding-top: 10px;

      .price-in-eur { display: inline; }
      .price-in-dollars { display: none; }
    }

    .actions {
      text-align: center;
      margin: 0 0 1em;
    }

    .button {
      font-size: modular-scale(0.5, $base-font-size, golden());
      background: white;
      border: 1px solid $mid-grey;
      color: $mid-grey;
      letter-spacing: 0;
      text-shadow: none;
    }

    &.featured .button {
      color: white;
      background: $green;
      border-color: $green;
    }

    .price {
      text-align: center;
      font-size: modular-scale(3.5, $base-font-size, golden());
      font-weight: bold;
      word-wrap: nowrap;
      padding: .25em 0;
      background: $plan-background;
      color: white;
    }
  }

  .show-prices-in-dollars {
    text-align: center;
    clear: both;
    padding-top: 3em;

    .button {
      background: transparent; 
      border: 1px solid $mid-grey;
      color: $mid-grey;
      text-shadow: none;

      &:hover {
        background: transparent;
        color: $dark-grey;
        border-color: $dark-grey;
      } 
    }
  }
}

